<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:elevation="10dp"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_media_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/media_cover"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            android:contentDescription="@string/add_to_favorite"
            app:fabSize="normal"
            app:srcCompat="@drawable/baseline_favorite_border_24" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/summary"
            android:textStyle="italic"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/owner"
            android:textStyle="bold"
            android:textAlignment="center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quota"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tv_begin_time"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_begin_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_time"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_quota"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="@string/register" />

    </LinearLayout>

</ScrollView>